--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
     "minimum-stability": "dev",
     "require": {
 
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x"
+        }
     }
 }
